[package]
name = "field-encryption"
license = "MIT"
version = "0.0.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/vladimir-ea/field-encryption"
description = """
A library for formattable field encyption.
"""
keywords = ["encryption", "regex", "fpe"]
categories = ["cryptography"]

[dependencies]
generic-array = "0.14.6"
hkdf = "0.12.3"
regex-automata = "0.1"
sha3 = "0.10.6"
thiserror="1.0"